Revert "structural file change due to typescript not taking .ts files for its workers"
This reverts commit 9411a91c4c1e4fefce68f53d3de28605adf3908d.

--- a/tsconfig.generic.json
+++ b/tsconfig.generic.json
@@ -8,6 +8,6 @@
     "composite": true,                    
     "strict": true,
     "moduleResolution": "node",           
-    "rootDir": "./main"                    
+    "rootDir": "."                    
   },
 }
